After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758710 - m3u-files will not start any more; error "The given film cannot be found"
m3u-files will not start any more; error "The given film cannot be found"
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Movie player
3.16.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-11-26 15:29 UTC by Cor Nouws
Modified: 2015-11-26 16:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
lines: Fix parsing of m3u files (1.70 KB, patch)
2015-11-26 16:42 UTC, Bastien Nocera
none Details | Review
lines: Fix parsing of m3u files (3.96 KB, patch)
2015-11-26 16:55 UTC, Bastien Nocera
committed Details | Review

Description Cor Nouws 2015-11-26 15:29:22 UTC
Hi,

After the recent  Ubuntu upgrade (32 bits, 15.10 - obviously) Totem doesn't accept the m3u files any more. The m3u text files simply have a line for each audio file.
It gives an error message: "The given film cannot be found" (translated from Dutch).
This worked in the older version.

Could not find a (recent) duplicate bug here. But may have searched not well enough (new with this software).

Version 3.16.4 (Is it normal that Help doesn't show a version number?)

Cheers - Cor
Comment 1 Bastien Nocera 2015-11-26 16:42:15 UTC
Created attachment 316327 [details] [review]
lines: Fix parsing of m3u files

This was broken since commit d2caf76e0646f29ee8edcc89627398d8363dd327
(and version 3.10.4) which changed the functions used to emit new
playlist items.

We didn't take enough care to replace totem_pl_parser_add_one_file()
calls by TOTEM_PL_PARSER_FIELD_FILE fields, and passed GFiles as URIs
instead, leading to garbage being added, and possibly to crashes.
Comment 2 Cor Nouws 2015-11-26 16:47:34 UTC
Wow :) Thanks for the quick action Bastien!
Comment 3 Bastien Nocera 2015-11-26 16:55:57 UTC
Created attachment 316330 [details] [review]
lines: Fix parsing of m3u files

This was broken since commit d2caf76e0646f29ee8edcc89627398d8363dd327
(and version 3.10.4) which changed the functions used to emit new
playlist items.

We didn't take enough care to replace totem_pl_parser_add_one_file()
calls by TOTEM_PL_PARSER_FIELD_FILE fields, and passed GFiles as URIs
instead, leading to garbage being added, and possibly to crashes.

Include test case to avoid this sort of error in the future.
Comment 4 Bastien Nocera 2015-11-26 16:56:23 UTC
Attachment 316330 [details] pushed as 21f64b6 - lines: Fix parsing of m3u files