lines: Fix parsing of m3u files

This was broken since commit d2caf76e0646f29ee8edcc89627398d8363dd327
(and version 3.10.4) which changed the functions used to emit new
playlist items.

We didn't take enough care to replace totem_pl_parser_add_one_file()
calls by TOTEM_PL_PARSER_FIELD_FILE fields, and passed GFiles as URIs
instead, leading to garbage being added, and possibly to crashes.

Include test case to avoid this sort of error in the future.

https://bugzilla.gnome.org/show_bug.cgi?id=758710